<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView android:text="@string/hello_word" android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:background="#FFA500"
        android:textColor="#000000"
        android:text="@string/BecomeHelper"
        android:layout_width="274dp"
        android:layout_height="70dp"
        android:id="@+id/button_help"
        android:layout_below="@+id/button_search"
        android:layout_alignLeft="@+id/button_search"
        android:layout_alignStart="@+id/button_search"
        android:layout_marginTop="124dp" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/search"
        android:id="@+id/imageButton"
        android:layout_alignBottom="@+id/button_search"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/button_search" />

    <Button
        android:background="#FFA500"
        android:textColor="#000000"
        android:text="@string/SearchHelper"
        android:src="@drawable/search"
        android:layout_width="274dp"
        android:layout_height="70dp"
        android:id="@+id/button_search"
        android:layout_marginTop="110dp"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/imageButton" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/help"
        android:id="@+id/imageButton2"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/button_help"
        android:layout_alignTop="@+id/button_help" />

</RelativeLayout>
