<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_tchat"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.miage.paris10.projetm1.helpu.TchatActivity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_above="@+id/llActions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </android.support.v7.widget.RecyclerView>

    <LinearLayout
        android:id="@+id/llActions"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/imageLoader"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/imageButton"
                android:contentDescription="@string/tchat_content_img"
                android:src="@drawable/img_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/etMessage"
                android:layout_width="0dp"
                android:hint="@string/tchat_hint"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:layout_weight="1"
                android:layout_height="wrap_content" />

            <ImageButton
                android:id="@+id/sendButton"
                android:contentDescription="@string/tchat_content_send"
                android:src="@drawable/img_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>
